# Compiler

./: README.md
Lab1/Code/: Makefile  error.h  lex.yy.c  lexical.l  main.c  parser  syntax.output  syntax.tab.c  syntax.tab.h  syntax.y  test.txt  tree  tree.c  tree.h
Lab1/Test/: test1.cmm
Lab1/Testcjy/: test10.cmm  test11.cmm  test12.cmm  test13.cmm  test14.cmm  test15.cmm  test16.cmm  test17.cmm  test3.cmm  test4.cmm  test5.cmm  test6.cmm  test7.cmm  test8.cmm  test9.cmm
Lab1/Tests_1_Super/: test_2.output
Lab2/: scanner
Lab2/Code/: Makefile  autogen.sh  c2cpp.cpp  error.c  error.h  lex.yy.c  lexical.l  main.c  parser  syntax.output  syntax.tab.c  syntax.tab.h  syntax.y  tree.c  tree.h
Lab2/Code/ast/: ASTNode.h  CMakeLists.txt  Declarator.h  Expression.h  HighLevelDef.h  Specifier.h  Statement.h  Symbol.h  Transform.cpp  Transform.h  TypeSystem.cpp  Visitor.h  VisitorExpression.h  ast.h  type.h
Lab2/Code/ast/visitor/: ExpressionVisitor.cpp  FunReturnVisitor.cpp  PrintVisitor.cpp  TypeVisitor.cpp
Lab2/Code/cpp-src/: ASTNode.h  CMakeLists.txt  Declarator.h  Definition.h  Expression.h  HighLevelDef.h  Specifier.h  Statement.h  Visitor.h
Lab2/Test/: testc1.output
Lab3/: parser
Lab3-old/Code/ast/: CMakeLists.txt  HighLevelDef.h  Transform.cpp  ast.h
Lab3-old/Code/ast/ir/: IRBuilderVisitor.h
Lab3-old/Code/ast/visitor/: ExpressionVisitor.cpp  TypeVisitor.cpp
Lab3/Code/: Makefile  autogen.sh  c2cpp.cpp  core  error.c  lex.yy.c  lexical.l  main.c  parser  syntax.output  syntax.tab.c  syntax.tab.h  syntax.y  test_fsw.output  tree.h
Lab3/Test/: evaluation.md  out1.ir  out3.ir  outA1.ir  outA2.ir  outA3.ir  outA4.ir  outA5.ir  (+30 more)
irsim/: test1.ir
(+184 files in other folders)
